--- a/HK/DEMO_NEW.html
+++ b/HK/DEMO_NEW.html
@@ -3290,8 +3290,8 @@ EX.
 &lt;/div&gt;&lt;&lt;/nobr&gt;&gt;
 &lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="32" name="ch03_2" tags="" position="1025,800" size="100,100">&lt;&lt;if $answer is true&gt;&gt;恭喜你答對了！&lt;&lt;else&gt;&gt;不對喔，出生在台南市的身分證字號是@@color:red;D@@才對喔！&lt;&lt;/if&gt;&gt;
 
-&lt;&lt;timed 0.5s t8n&gt;&gt;那你知道英文代碼是HF的代表甚麼嗎？
-&lt;&lt;next&gt;&gt;&lt;div id=&quot;choicebutton&quot;&gt;
+&lt;&lt;timed 2s t8n&gt;&gt;那你知道英文代碼是HF的代表甚麼嗎？
+&lt;div id=&quot;choicebutton&quot;&gt;
 &lt;&lt;button &#39;外星人&#39; &#39;ch03_3&#39;&gt;&gt;&lt;&lt;set $answer to false&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;&lt;button &#39;港澳居民&#39; &#39;ch03_3&#39;&gt;&gt;&lt;&lt;set $answer to true&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;/div&gt;
@@ -3309,7 +3309,7 @@ HF是港澳居民居留證的身分代碼。
 &lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="34" name="ch03_4_1" tags="" position="1300,800" size="100,100">你是一名來臺灣讀大學的香港人，畢業後希望留在臺灣，
 你決定在臺灣找工作，好取得居留證。
 
-&lt;&lt;timed 1s t8n&gt;&gt;請問你應該選擇以下哪個工作？
+&lt;&lt;timed 2s t8n&gt;&gt;請問你應該選擇以下哪個工作？
 &lt;&lt;nobr&gt;&gt;&lt;div id=&quot;choicebutton&quot;&gt;
 &lt;&lt;button &#39;大學學生餐廳幫廚.，薪水是新臺幣26,400&#39; &#39;ch03_4_2&#39;&gt;&gt;&lt;&lt;set $answer to false&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;&lt;button &#39;大學研究助理，薪水是新臺幣60,000&#39; &#39;ch03_4_2&#39;&gt;&gt;&lt;&lt;set $answer to true&gt;&gt;&lt;&lt;/button&gt;&gt;
@@ -3338,7 +3338,7 @@ HF是港澳居民居留證的身分代碼。
 &lt;&lt;button &#39;依親（未完成）&#39; &#39;ch03_6_1&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;/div&gt;&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="39" name="ch03_4_3" tags="autosave" position="1550,800" size="100,100">這時你想到自己在香港有考潛水執照，又想到臺灣四面環海，工作一定很好找。
 
-&lt;&lt;timed 1s t8n&gt;&gt;很幸運的，你一家潛水公司願意僱用你，但還是無法申請到居留證，你覺得是甚麼問題？
+&lt;&lt;timed 2s t8n&gt;&gt;很幸運的，你一家潛水公司願意僱用你，但還是無法申請到居留證，你覺得是甚麼問題？
 &lt;&lt;nobr&gt;&gt;&lt;div id=&quot;choicebutton&quot;&gt;
 &lt;&lt;button &#39;你的牌照不是在臺灣考的，不能算&#39; &#39;ch03_4_4&#39;&gt;&gt;&lt;&lt;set $answer to false&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;&lt;button &#39;你指導的學生不是奧運選手&#39; &#39;ch03_4_4&#39;&gt;&gt;&lt;&lt;set $answer to true&gt;&gt;&lt;&lt;/button&gt;&gt;
@@ -3369,7 +3369,7 @@ HF是港澳居民居留證的身分代碼。
 &lt;&lt;choiceitem &quot;ch03_4_7&quot;&gt;&gt;
 &lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="43" name="ch03_4_7" tags="" position="2050,800" size="100,100">你望著螢幕，雖然生涯規劃沒有固定格式，但空白的螢幕像是一堵牆。
 
-&lt;&lt;timed 1s t8n&gt;&gt;你不知道突破這堵牆之後，是臺灣的日常風景，還是下一堵牆？
+&lt;&lt;timed 2s t8n&gt;&gt;你不知道突破這堵牆之後，是臺灣的日常風景，還是下一堵牆？
 &lt;&lt;nobr&gt;&gt;&lt;div id=&quot;choicebutton&quot;&gt;
 &lt;&lt;button &#39;你決定放棄申請，回到香港&#39; &#39;ch03_4_8&#39;&gt;&gt;&lt;&lt;set $answer to false&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;&lt;button &#39;你想辦法用很委婉的方式，跟政府說自己的生涯規劃&#39; &#39;ch03_4_8&#39;&gt;&gt;&lt;&lt;set $answer to true&gt;&gt;&lt;&lt;/button&gt;&gt;
