--- a/HK/DEMO_NEW.html
+++ b/HK/DEMO_NEW.html
@@ -263,8 +263,8 @@ body.loading-page {
 
 /* 標題圖片 */
 .titleimage {
-  height: 6vh;
-  max-height: 200px;
+  width: 60vw;
+  max-width: 350px;
 }
 
 /* footer圖片 */
@@ -615,6 +615,7 @@ body {
   display: block;
   text-align: center;
   font-size: 1.3em;
+  margin-bottom: 20px;
 }
 
 #start-menu {
@@ -2904,10 +2905,10 @@ setup.SoundPath = setup.Path + "media/sounds/";
     點擊任意處繼續...
 &lt;/span&gt;&lt;&lt;/timed&gt;&gt;
 
-&lt;&lt;cont&gt;&gt;&lt;&lt;goto &#39;start-menu&#39;&gt;&gt;&lt;&lt;/cont&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="start-menu" tags="start-menu noreturn nofooter" position="600,125" size="100,100">&lt;&lt;fadein 1s&gt;&gt;
+&lt;&lt;cont&gt;&gt;&lt;&lt;goto &#39;start-menu&#39;&gt;&gt;&lt;&lt;/cont&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="start-menu" tags="start-menu noreturn nofooter nobr" position="600,125" size="100,100">&lt;&lt;fadein 1s&gt;&gt;
     &lt;div id=&quot;start-title&quot;&gt;&lt;&lt;include &#39;遊戲標題&#39;&gt;&gt;&lt;/div&gt;
     &lt;div id=&quot;start-subtitle&quot;&gt;&lt;&lt;include &#39;遊戲副標題&#39;&gt;&gt;&lt;/div&gt;
-    &lt;&lt;nobr&gt;&gt;&lt;div id=&quot;start-menu&quot;&gt;&lt;&lt;include &#39;遊戲開始選單&#39;&gt;&gt;&lt;/div&gt;&lt;&lt;/nobr&gt;&gt;
+    &lt;div id=&quot;start-menu&quot;&gt;&lt;&lt;include &#39;遊戲開始選單&#39;&gt;&gt;&lt;/div&gt;
 &lt;&lt;/fadein&gt;&gt;</tw-passagedata><tw-passagedata pid="3" name="credits" tags="credits noreturn" position="125,125" size="100,100">&lt;&lt;nobr&gt;&gt;&lt;div style=&#39;text-align: center;&#39;&gt;&lt;img src=&quot;media/img/exhibitionlogo.png&quot; width=&quot;80%&quot;&gt;&lt;/div&gt;&lt;&lt;/nobr&gt;&gt;
 
 日期｜2024年8月30日至9月12日
