--- a/HK/DEMO_NEW.html
+++ b/HK/DEMO_NEW.html
@@ -3931,6 +3931,7 @@ HF是港澳居民居留證的身分代碼。
 &lt;&lt;next&gt;&gt;也許真正的答案不是你準備多少資料，而是多少人能堅持到最後，或者，放棄留在這裡的人夠多。
 
 &lt;&lt;choiceitem &quot;ch03_5_end&quot;&gt;&gt;
+&lt;&lt;/timed&gt;&gt;
 &lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="61" name="ch03_5_end" tags="autosave center nofooter" position="2150,1350" size="100,100">&lt;div class=&quot;card&quot;&gt;\
     &lt;img src=&quot;media/img/player1.jpg&quot; class=&quot;card_image&quot;&gt;
     &lt;div class=&quot;grid-container&quot;&gt;\
