--- a/HK/DEMO_NEW.html
+++ b/HK/DEMO_NEW.html
@@ -3736,7 +3736,8 @@ HF是港澳居民居留證的身分代碼。
       &lt;div class=&quot;grid-tag&quot;&gt;
         &lt;span class=&quot;result1&quot;&gt;&lt;&lt;if $ch3result is &#39;success01&#39;&gt;&gt;&quot;&quot;&quot;#&quot;&quot;&quot;爭取移民&lt;&lt;else&gt;&gt;&quot;&quot;&quot;#&quot;&quot;&quot;放棄移民&lt;&lt;/if&gt;&gt;&lt;/span&gt;
         &lt;span class=&quot;result2&quot;&gt;&lt;&lt;if $ch3result is &#39;success01&#39;&gt;&gt;&quot;&quot;&quot;#&quot;&quot;&quot;留在台灣&lt;&lt;else&gt;&gt;&quot;&quot;&quot;#&quot;&quot;&quot;回到香港&lt;&lt;/if&gt;&gt;&lt;/span&gt;
-      &lt;/div&gt;&lt;/div&gt;&lt;img src=&quot;media/img/organization.png&quot; class=&quot;footerimage&quot;&gt;&lt;/div&gt;
+      &lt;/div&gt;&lt;/div&gt;
+      &lt;img src=&quot;media/img/organization.png&quot; class=&quot;footerimage&quot;&gt;&lt;/div&gt;
 &lt;&lt;button &quot;下載結果&quot;&gt;&gt;&lt;&lt;captureScreen &quot;.card&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
 
 @@color:#890000;【體驗結束】@@
@@ -3946,7 +3947,8 @@ HF是港澳居民居留證的身分代碼。
       &lt;div class=&quot;grid-tag&quot;&gt;
         &lt;span class=&quot;result1&quot;&gt;&lt;&lt;if $ch3result is &#39;success01&#39;&gt;&gt;&quot;&quot;&quot;#&quot;&quot;&quot;成功移民&lt;&lt;else&gt;&gt;&quot;&quot;&quot;#&quot;&quot;&quot;放棄移民&lt;&lt;/if&gt;&gt;&lt;/span&gt;
         &lt;span class=&quot;result2&quot;&gt;&lt;&lt;if $ch3result is &#39;success01&#39;&gt;&gt;&quot;&quot;&quot;#&quot;&quot;&quot;留在台灣&lt;&lt;else&gt;&gt;&quot;&quot;&quot;#&quot;&quot;&quot;回到香港&lt;&lt;/if&gt;&gt;&lt;/span&gt;
-      &lt;/div&gt;&lt;/div&gt;&lt;img src=&quot;media/img/organization.png&quot; class=&quot;footerimage&quot;&gt;&lt;/div&gt;
+      &lt;/div&gt;&lt;/div&gt;
+      &lt;img src=&quot;media/img/organization.png&quot; class=&quot;footerimage&quot;&gt;&lt;/div&gt;
 &lt;&lt;button &quot;下載結果&quot;&gt;&gt;&lt;&lt;captureScreen &quot;.card&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
 
 @@color:#890000;【體驗結束】@@
